@@ -1,5 +1,5 @@
 /*
- * weapons2bh
+ * weapons2b.h
  *
  * ShowEQ Distributed under GPL
  * http://seq.sourceforge.net/
@@ -134,7 +134,6 @@
     NULL,                 // 0x7d
     NULL,                 // 0x7e
     NULL,                 // 0x7f
-
     NULL,                 // 0x80
     NULL,                 // 0x81
     NULL,                 // 0x82
